// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MessageInput /> renders correctly 1`] = `
<div
  className="MuiInput-root-15 MuiInput-fullWidth-22 MuiInput-underline-19"
  onKeyPress={[Function]}
>
  <input
    aria-invalid={undefined}
    aria-required={undefined}
    autoComplete={undefined}
    autoFocus={undefined}
    className="MuiInput-input-23"
    defaultValue={undefined}
    disabled={false}
    id={undefined}
    name={undefined}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={undefined}
    onKeyUp={undefined}
    placeholder="Type your message…"
    readOnly={undefined}
    required={undefined}
    rows={undefined}
    type="text"
    value=""
  />
</div>
`;

exports[`<MessageInput /> renders correctly disabled 1`] = `
<div
  className="MuiInput-root-15 MuiInput-disabled-18 MuiInput-fullWidth-22 MuiInput-underline-19"
  onKeyPress={[Function]}
>
  <input
    aria-invalid={undefined}
    aria-required={undefined}
    autoComplete={undefined}
    autoFocus={undefined}
    className="MuiInput-input-23 MuiInput-inputDisabled-25"
    defaultValue={undefined}
    disabled={true}
    id={undefined}
    name={undefined}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={undefined}
    onKeyUp={undefined}
    placeholder="Type your message…"
    readOnly={undefined}
    required={undefined}
    rows={undefined}
    type="text"
    value=""
  />
</div>
`;
